--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,7 @@ button:hover {
   overflow: hidden;
   max-width: 640px;
   flex: 1;
-  max-height: 360px;
+  min-height: 360px;
   border-radius: 10px;
   background-color: #54A6FF;;
 }
@@ -155,7 +155,7 @@ button:hover {
   position: relative;
   max-width: 640px;
   flex: 1;
-  max-height: 360px;
+  min-height: 360px;
   border-radius: 10px;
   background-color: var(--blue);
 }
@@ -657,16 +657,21 @@ color: #1A202C;
 }
 .car-single-subphotos {
   display: flex;
+  flex: 1;
   gap: 20px;
 }
 .car-single-subphotos div{
   flex: 1;
+  border-radius: 10px;
+  background-color: red;
 }
 .car-single-expanded-description {
   flex: 1;
+  padding: 20px;
   max-width: 640px;
+  min-height: 480px;
   background-color: #FFFFFF;
-  border-radius: 8px;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
 }
@@ -681,6 +686,7 @@ color: #1A202C;
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
+  margin-bottom: auto;
 }
 .car-attributes p{
   font-family: 'Plus Jakarta Sans', sans-serif;
@@ -703,4 +709,24 @@ color: #1A202C;
   font-weight: 600;
   font-size: 20px;
   color: #596780;
+}
+.single-car-name {
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  font-weight: 700;
+  font-size: 32px;
+  margin: 0;
+  color: #1A202C;
+}
+.single-reviews {
+  display: flex;
+  flex-direction: column;
+}
+.review-headers-div{
+  text-align: start;
+}
+.review-flex-div {
+
+}
+.review-comment-container {
+
 }
