--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -90,6 +90,16 @@ button:hover {
   border-radius: 50%;
   border: 1px solid var(--darkGrey);
 }
+.profile-icon {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: capitalize;
+  border: 1px solid var(--darkGrey);
+}
 /* Ad header-content */
 .header-container{
   display: flex;
@@ -168,7 +178,6 @@ button:hover {
   align-items: flex-start;
   padding: 15px;
   gap: 16px;
-
   width: 284px;
   height: 160px;
 }
@@ -184,8 +193,7 @@ button:hover {
 .ad-text p {
   font-family: 'Plus Jakarta Sans', sans-serif;
   font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 150%;
   display: flex;
   margin: 0;
@@ -750,6 +758,7 @@ color: #1A202C;
 }
 .review-comment-container {
   display: flex;
+  text-transform: capitalize;
   gap: 20px;
 }
 .review-comment-profile-container {
@@ -757,13 +766,7 @@ color: #1A202C;
   display: flex;
   justify-content: center;
 }
-.review-comment-profile-container a{
-  border-radius: 50%;
-  margin: 15px;
-  width: 56px;
-  height: 56px;
-  display: flex;
-}
+
 .review-comment-main {
   display: flex;
   flex-direction: column;
@@ -918,8 +921,11 @@ color: #1A202C;
 .shorflex0 {
   flex: none;
 }
+.wd100 {
+  width: 100%;
+}
 .shorflex1 {
-  flex: 1
+  flex: 1;
 }
 .spaceb {
   justify-content: space-between;
@@ -993,6 +999,62 @@ color: #1A202C;
   }
 }
 /* admin panel */
+.menu-side-container {
+  min-width: 280px;
+}
+.admin-side-top {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.admin-menu-text {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+}
+.admin-menu-text:hover {
+ background-color: #3563E9; 
+}
+.admin-menu-text:hover p{
+  color: white; 
+ }
+.admin-menu-text p {
+font-size: 16px;
+line-height: 150%;
+color: #90A3BF;
+}
+.car-img-small {
+  display: flex;
+  flex: 1;
+  background-color: red;
+  max-height: 70px;
+  max-width: 140px;
+}
+.car-img-small div{
+  flex: 1;
+}
+.directions-container {
+  display: flex;
+  padding: 20px;
+}
+.directions-container div{
+  background-color: blue;
+  flex: 1;
+  min-height: 350px;
+  border-radius: 10px;
+}
+.rentals-details {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.admin-panel-container {
+  display: flex;
+  flex: 1;
+}
+.bg-grey {
+  background-color: #f5f5f5;
+}
 .label-secondary {
     font-family: 'Plus Jakarta Sans', sans-serif;
   font-weight: 600;
@@ -1009,4 +1071,109 @@ color: #1A202C;
 }
 .red {
   background-color: red;
+}
+/* login */
+.img-abs {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+.login-flex-container {
+  display: flex;
+  min-width: 50%;
+}
+.login-header-container {
+  flex: 1;
+  background-color: #54A6FF;
+  border-radius: 10px 0 0 10px ;
+  position: relative;
+}
+.login-container {
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+}
+
+.input-form{
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 300px;
+  height: 400px;
+  background-color: white;
+  border-radius: 0 10px 10px 0 ;
+  border: 1px solid rgb(221, 220, 220);
+  box-shadow: 0 0 5px 1px rgb(221, 220, 220);
+}
+.user-registration-div button{
+  all: unset;
+  padding: 5px;
+  color: var(--dark);
+  font-weight: 700;
+  font-size: 18px;
+  margin-right: 15px;
+  cursor: pointer;
+}
+.active {
+  border-bottom: 2px solid  rgb(0, 119, 255) !important;
+}
+.input-div {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  flex: 1;
+}
+.input-parent-div input {
+  background-color: #F6F7F9;
+  padding: 20px;
+  border: none;
+  flex: 1;
+  max-height: 20px;
+  border-radius: 10px;
+}
+.input-div input:hover, .input-div input:focus {
+  box-shadow: 0 0 5px 1px rgb(221, 220, 220), inset 0 0 30px 1px var(--light) !important ;
+}
+.input-parent-div {
+  display: flex;
+  flex: 1;
+  gap: 10px;
+  text-align: start;
+  flex-direction: column;
+}
+.input-parent-div label{
+  font-weight: 700;
+  font-size: 22px;
+  font-size: 14px;
+}
+.submit-btn{
+  background-color: #3563E9; 
+  border: 0;
+  margin-top: 40px;
+  color: white;
+  width: 100%;
+  padding: 10px;
+  border-radius: 25px;
+  cursor: pointer
+}
+.submit-btn[disabled]{
+  color: white;
+  text-transform: uppercase;
+  font-size: 16px;
+  letter-spacing: 1px;
+  background-color: rgba(0, 0, 0, 0.301);
+  cursor: default;
+  pointer-events: none;
+}
+.submit-btn:hover{
+  background-color: rgba(0, 119, 255, 0.747);
+  box-shadow: inset 0 0 30px 1px rgb(255, 255, 255);
+}
+
+@media screen and (max-height: 200px) {
+  .input-form {
+      background-color: red;
+  }
 }
