finished features and created md file

--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -64,6 +64,9 @@ button:hover {
 .pointer {
   cursor: pointer;
 }
+.cap {
+  text-transform: capitalize;
+}
 .search-div-fixed {
   position: relative;
 }
